@startuml BankDatabase_AccountsERD
!theme plain
skinparam entityStyle rectangle

entity "customers" as customers {
  *customer_id : UUID <<PK>>
}

note right of customers
Reference to CustomerERD
end note

entity "products" as products {
  *product_id : UUID <<PK>>
  --
  product_name : TEXT
  product_type : TEXT
  interest_rate : NUMERIC(5,2)
  min_balance : NUMERIC(15,2)
  currency : CHAR(3)
  description : TEXT
  created_at : TIMESTAMPTZ
}

entity "accounts" as accounts {
  *account_id : UUID <<PK>>
  --
  product_id : UUID <<FK>>
  account_number : TEXT
  iban : TEXT
  currency : CHAR(3)
  status : TEXT
  opened_at : TIMESTAMPTZ
  closed_at : TIMESTAMPTZ
  account_type : TEXT
  sub_type : TEXT
  current_balance : NUMERIC(15,2)
}

entity "account_parties" as account_parties {
  *account_id : UUID <<FK>>
  *customer_id : UUID <<FK>>
  role : TEXT
}

note right of accounts
** current_balance is the running total balance of the account which is updated in place **
Account Number Generation:
1. 3-digit Branch Code (e.g., 001)
2. 8-digit Random Number
Format: [BranchCode][Random8]
Example: 00154873921
end note

customers ||--o{ account_parties : "is linked to"
accounts ||--o{ account_parties : "has"
products ||--o{ accounts : "defines"

@enduml
